# fastapi-boilerplate

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
app/auth/application/: auth_service.py
app/auth/domain/: token.py
app/post/application/: post_service.py
app/post/domain/: post.py
app/user/application/: user_service.py  user_service_test.py
app/user/domain/: user.py
common/: base_db_models.py  config.py  containers.py  context_vars.py  db_models.py  models.py
common/decorator/: cache.py
common/unit_of_work/: uow.py
common/uow/: uow_impl.py
core/: config.py  containers.py  database.py  decorators.py  redis.py
core/application/dto/: post.py
core/application/service/: auth_service.py  post_service.py  user_service.py  user_service_test.py
core/dependencies/: auth.py  database.py  messaging.py
core/domain/model/: user.py
core/domain/repository/: post_repo.py  user_repo.py
core/helpers/: cache.py  db_scope.py
core/infra/: cache.py  celery.py  containers.py  database.py  db_models.py  distributed_lock.py  redis.py
core/infra/dependencies/: auth.py
core/infra/model/: post.py  user.py
core/infra/repository/: post_repo.py  tag_repo.py  user_repo.py  user_repo_test.py
core/infra/unit_of_work/: uow.py
core/middlewares/: current_user.py  session.py
core/uow/: abstract.py  uow_impl.py
migrations/: env.py
migrations/versions/: 2024_11_20_2305-b94a53df0477_first_migration.py  2024_11_25_2236-9a249ad0c6d5_add_post_and_tag_model.py  2024_11_27_2207-bb08534b1e45_fix_tag_table.py
utils/: db_utils.py  jwt_utils.py
(+36 files in other folders)
