[tool.poetry]
name = "fastapi-scalable"
version = "0.1.0"
description = ""
authors = ["Joje1283 <joje1283@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
passlib = "^1.7.4"
pydantic-settings = "^2.6.1"
python-jose = "^3.3.0"
sqlmodel = "^0.0.22"
dependency-injector = "^4.43.0"
loguru = "^0.7.2"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
celery = "^5.4.0"
py-ulid = "^1.0.3"
alembic = "^1.14.0"
mysqlclient = "^2.2.6"
pydantic = {extras = ["email"], version = "^2.9.2"}
aiomysql = "^0.2.0"
cryptography = "^43.0.3"
bcrypt = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
